--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div class="root">
     <div class="card">
       <div class="card-image">
-        <img src="./images/drawers.jpg" alt="" width="285px" height="280px">
+        <img src="./images/drawers.jpg" alt="">
       </div>
       <div class="card-text">
         <h3 class="title">Shift the overall look and feel by adding these wonderful touches to furniture in your home
@@ -35,9 +35,15 @@
             <i class="fas fa-share"></i>
           </div>
         </div>
+
+        <div class="card-social">
+          <div class="square"></div>
+        </div>
       </div>
     </div>
   </div>
+
+  <script src="./js/index.js"></script>
 </body>
 
 </html>
