--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
         </div>
 
         <div class="card-social">
+          <p class="text">share</p>
+          <i class="fab fa-facebook-square"></i>
+          <i class="fab fa-twitter"></i>
+          <i class="fab fa-pinterest"></i>
           <div class="square"></div>
         </div>
       </div>
