Adicionando comemtarios no index.html

--- a/index.html
+++ b/index.html
@@ -13,13 +13,21 @@
 
 <body>
   <div class="root">
+    <!-- Card -->
     <div class="card">
-      <div class="card-image">
-        <img src="./images/drawers.jpg" alt="">
-      </div>
-      <div class="card-text">
-        <h3 class="title">Shift the overall look and feel by adding these wonderful touches to furniture in your home
-        </h3>
+      <!-- Image -->
+      <div class="image">
+        <img class="image-content" src="./images/drawers.jpg" alt="">
+      </div> <!-- Fim -->
+
+      <!-- Text -->
+      <div class="text">
+
+        <!-- Title -->
+        <h1 class="title">Shift the overall look and feel by adding these wonderful touches to furniture in your home
+        </h1> <!-- Fim -->
+
+        
         <p class="text">Ever been in a room and felt like something was missing? Perhaps
           it felt slightly bare and uninviting. I’ve got some simple tips
           to help you make any room feel complete.</p>
@@ -43,8 +51,6 @@
             <div class="square"></div>
           </div>
         </div>
-
-        
       </div>
     </div>
   </div>
