--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="./css/index.css">
+  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@500;700&display=swap" rel="stylesheet">
 
   <script src="https://kit.fontawesome.com/cd8f2cd442.js" crossorigin="anonymous"></script>
   <title>Article preview</title>
@@ -13,49 +14,27 @@
 
 <body>
   <div class="root">
-    <!-- Card -->
     <div class="card">
-      <!-- Image -->
-      <div class="image">
-        <img class="image-content" src="./images/drawers.jpg" alt="">
-      </div> <!-- Fim -->
-
-      <!-- Text -->
-      <div class="text">
-
-        <!-- Title -->
-        <h1 class="title">Shift the overall look and feel by adding these wonderful touches to furniture in your home
-        </h1> <!-- Fim -->
-
-        
-        <p class="text">Ever been in a room and felt like something was missing? Perhaps
+      <div class="left">
+        <img class="img" src="./images/drawers.jpg" alt="">
+      </div>
+      <div class="right">
+        <h1 class="title">
+          Shift the overall look and feel by adding these wonderful touches to furniture in your home
+        </h1>
+        <p class="text">
+          Ever been in a room and felt like something was missing? Perhaps
           it felt slightly bare and uninviting. I’ve got some simple tips
-          to help you make any room feel complete.</p>
-        <div class="avatar">
-          <div class="image">
-            <img src="./images/avatar-michelle.jpg" alt="">
-          </div>
-          <div class="info">
-            <p class="name">Michelle Appleton</p>
-            <p class="date">28 Jun 2020</p>
-          </div>
-          <div class="share">
-            <i class="fas fa-share"></i>
-          </div>
-
-          <div class="card-social">
-            <p class="text">share</p>
-            <i class="fab fa-facebook-square"></i>
-            <i class="fab fa-twitter"></i>
-            <i class="fab fa-pinterest"></i>
-            <div class="square"></div>
-          </div>
+          to help you make any room feel complete.
+        </p>
+        <div class="share">
+          <h2>test</h2>
         </div>
       </div>
     </div>
   </div>
 
-  <script src="./js/index.js"></script>
+  <!-- <script src="./js/index.js"></script> -->
 </body>
 
 </html>
