Refatorando o index.html

--- a/index.html
+++ b/index.html
@@ -28,7 +28,23 @@
           to help you make any room feel complete.
         </p>
         <div class="share">
-          <h2>test</h2>
+          <div class="avatar">
+            <img class="avatar-img" src="./images/avatar-michelle.jpg" alt="">
+            <div class="avatar-info">
+              <h2>Michelle Appleton</h2>
+              <p>28 Jun 2020</p>
+            </div>
+          </div>
+          <div class="icon-share">
+            <i class="fas fa-share"></i>
+          </div>
+          <div class="social">
+            <p>share</p>
+              <i class="fab fa-facebook-square"></i>
+              <i class="fab fa-twitter"></i>
+              <i class="fab fa-pinterest"></i>
+              <div class="triangle"></div>
+          </div>  
         </div>
       </div>
     </div>
