--- a/index.html
+++ b/index.html
@@ -4,53 +4,23 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="./css/index.css">
-  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@500;700&display=swap" rel="stylesheet">
-
-  <script src="https://kit.fontawesome.com/cd8f2cd442.js" crossorigin="anonymous"></script>
-  <title>Article preview</title>
+  <title>FrontEndMentor | Article preview Component</title>
 </head>
 
 <body>
-  <div class="root">
+  <div class="content">
     <div class="card">
-      <div class="left">
-        <img class="img" src="./images/drawers.jpg" alt="">
+      <div class="card__image"></div>
+      <div class="card__text">
+        <h1 class="card__text__title"></h1>
+        <p class="card__text__body"></p>
       </div>
-      <div class="right">
-        <h1 class="title">
-          Shift the overall look and feel by adding these wonderful touches to furniture in your home
-        </h1>
-        <p class="text">
-          Ever been in a room and felt like something was missing? Perhaps
-          it felt slightly bare and uninviting. I’ve got some simple tips
-          to help you make any room feel complete.
-        </p>
-        <div class="share">
-          <div class="avatar">
-            <img class="avatar-img" src="./images/avatar-michelle.jpg" alt="">
-            <div class="avatar-info">
-              <h2>Michelle Appleton</h2>
-              <p>28 Jun 2020</p>
-            </div>
-          </div>
-          <div class="icon-share">
-            <i class="fas fa-share"></i>
-          </div>
-          <div class="social">
-            <p>share</p>
-              <i class="fab fa-facebook-square"></i>
-              <i class="fab fa-twitter"></i>
-              <i class="fab fa-pinterest"></i>
-              <div class="triangle"></div>
-          </div>  
-        </div>
+      <div class="card__author">
+        <div class="card__author__avatar"></div>
+        <div class="card__author__name"></div>
       </div>
     </div>
   </div>
-
-  <!-- <script src="./js/index.js"></script> -->
 </body>
 
 </html>
