--- a/index.html
+++ b/index.html
@@ -2,22 +2,37 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>FrontEndMentor | Article preview Component</title>
+
+  <link rel="stylesheet" href="./assets/css/mormalize.css">
 </head>
 
 <body>
   <div class="content">
     <div class="card">
-      <div class="card__image"></div>
+      <img class="card__image" src="./assets/images/drawers.jpg" alt="Drawers"></img>
       <div class="card__text">
-        <h1 class="card__text__title"></h1>
-        <p class="card__text__body"></p>
+        <h1 class="card__title">
+          Shift the overall look and feel by adding these wonderful touches to
+          furniture in your home
+        </h1>
+        <p class="card__body">
+          Ever been in a room and felt like something was missing? Perhaps it
+          felt slightly bare and uninviting. I’ve got some simple tips to help
+          you make any room feel complete.
+        </p>
       </div>
       <div class="card__author">
-        <div class="card__author__avatar"></div>
-        <div class="card__author__name"></div>
+        <div class="card__info">
+          <img class="card__avatar" src="./assets/images/avatar-michelle.jpg" alt="Avatar michelle"></img>
+          <p class="card____name">MIchelle Appleton</p>
+          <p class="card__publish">28 Jun 2020</p>
+        </div>
+        <div class="card__share">
+          <img class="card__icon" src="./assets/images/icon-share.svg" alt="Share">
+        </div>
       </div>
     </div>
   </div>
