--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>FrontEndMentor | Article preview Component</title>
 
   <link rel="stylesheet" href="./assets/css/mormalize.css">
+  <link rel="stylesheet" href="./css/app.css">
 </head>
 
 <body>
