Estruturando o layout do cartão

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
   <link rel="stylesheet" href="./assets/css/mormalize.css">
   <link rel="stylesheet" href="./css/app.css">
+  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@500;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -28,7 +29,7 @@
       <div class="card__author">
         <div class="card__info">
           <img class="card__avatar" src="./assets/images/avatar-michelle.jpg" alt="Avatar michelle"></img>
-          <p class="card____name">MIchelle Appleton</p>
+          <p class="card__name">MIchelle Appleton</p>
           <p class="card__publish">28 Jun 2020</p>
         </div>
         <div class="card__share">
